--- a/Capstone_project/project.html
+++ b/Capstone_project/project.html
@@ -27,50 +27,50 @@
     <section id="main_image">
         <main id="title">
             <h1>Step into the Future</h1>
-            <img id="img1" src="images/picture1.png" alt="landing_image">
+            <img id="img1" src="picture1.png" alt="landing_image">
         </main>
     </section>
 
 
     <section id="images">
-        <div class="image image1"><img src="images/Neon_nights.png" alt="Neon Nights">
+        <div class="image image1"><img src="Neon_nights.png" alt="Neon Nights">
             <h3>Neon Nights</h3>
             <h2>Web Design</h2>
         </div>
 
-        <div class="image image2"><img src="images/Cyber_city.png" alt="Cyber City">
+        <div class="image image2"><img src="Cyber_city.png" alt="Cyber City">
             <h3>Cyber City</h3>
             <h2>App Development</h2>
         </div>
 
-        <div class="image image3"><img src="images/Retro_waves.png" alt="Retro Waves">
+        <div class="image image3"><img src="Retro_waves.png" alt="Retro Waves">
             <h3>Retro Waves</h3>
             <h2>Graphic Design</h2>
         </div>
 
-        <div class="image image4"><img src="images/Synth_dreams.png" alt="Synth Dreams">
+        <div class="image image4"><img src="Synth_dreams.png" alt="Synth Dreams">
             <h3>Synth Dreams</h3>
             <h2>Illustration</h2>
         </div>
-        <div class="image image5"><img src="images/Futuristic_vibes.png" alt="Futuristic Vibes">
+        <div class="image image5"><img src="Futuristic_vibes.png" alt="Futuristic Vibes">
             <h3>Futuristic Vibes</h3>
             <h2>Animation</h2>
         </div>
 
-        <div class="image image6"><img src="images/Digital_horizon.png" alt="Digital Horizon">
+        <div class="image image6"><img src="Digital_horizon.png" alt="Digital Horizon">
             <h3>Digital Horizons</h3>
             <h2>UI/UX</h2>
         </div>
 
-        <div class="image image7"><img src="images/Pixel_perfect.png" alt="Pixel Perfect">
+        <div class="image image7"><img src="Pixel_perfect.png" alt="Pixel Perfect">
             <h3>Pixel Perfection</h3>
             <h2>Game Design</h2>
         </div>
-        <div class="image image8"><img src="images/Virtual_reality.png" alt="Virtual Reality">
+        <div class="image image8"><img src="Virtual_reality.png" alt="Virtual Reality">
             <h3>Virtual Realities</h3>
             <h2>VR/AR</h2>
         </div>
-        <div class="image image9"><img src="images/Electric_dreams.png" alt="Electric Dreams">
+        <div class="image image9"><img src="Electric_dreams.png" alt="Electric Dreams">
             <h3>Electric Dreams</h3>
             <h2>Motion Graphics</h2>
         </div>
